[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harmonica"
version = "0.1.2"
description = "TbT data processing, frequency and parameters estimation, twiss parameters from amplitude and phase (combinations)"
readme = "README.MD"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Ivan Morozov" }]
dependencies = [
    "botorch",
    "gpytorch",
    "joblib",
    "nufft@git+https://github.com/i-a-morozov/nufft#egg=main", 
    "numpy",
    "pandas",
    "pyepics",
    "pytango",
    "PyYAML",
    "scikit-learn",
    "scipy",
    "statsmodels",
    "torch"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
script = [
    "jupyterlab",
    "plotly"
]

[tool.setuptools.packages.find]
include = ["harmonica*"]
